changed how the DataFrame that holds the data is created

--- a/learn.ipynb
+++ b/learn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:e1d556c4263e7344810ae883e2072c8e4e236f8fb3f6b2c45856113330bbb5fe"
+  "signature": "sha256:4c21d03945b880f60ecb4489cc69a8abbab363dc521d6c731f3c435143724ea9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -19,7 +19,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 73
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -50,8 +50,8 @@
       "scores1 = [x[0] for x in scores]\n",
       "scores2 = [x[1] for x in scores]\n",
       "\n",
-      "data = pandas.DataFrame(data = [dates, teams1, teams2, scores1, scores2],\n",
-      "                        index = [\"date\", \"team1\", \"team2\", \"score1\", \"score2\"]).T\n",
+      "d = {\"date\": dates, \"score1\": scores1, \"score2\": scores2,  \"team1\": teams1, \"team2\": teams2}\n",
+      "data = pandas.DataFrame(d)\n",
       "data\n",
       "# TODO: get more data in parallel (position=1, position=2, ...)\n",
       "# TODO: reduce the data"
@@ -74,92 +74,92 @@
         "    <tr style=\"text-align: right;\">\n",
         "      <th></th>\n",
         "      <th>date</th>\n",
-        "      <th>team1</th>\n",
-        "      <th>team2</th>\n",
         "      <th>score1</th>\n",
         "      <th>score2</th>\n",
+        "      <th>team1</th>\n",
+        "      <th>team2</th>\n",
         "    </tr>\n",
         "  </thead>\n",
         "  <tbody>\n",
         "    <tr>\n",
         "      <th>0</th>\n",
         "      <td> 03. 08. 2014 14:10</td>\n",
-        "      <td> South Korea ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
         "      <td> 1</td>\n",
         "      <td> 3</td>\n",
+        "      <td> South Korea ( W )</td>\n",
+        "      <td>   Serbia ( W )</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>1</th>\n",
         "      <td> 02. 08. 2014 17:40</td>\n",
-        "      <td>      Serbia ( W )</td>\n",
-        "      <td> Thailand ( W )</td>\n",
         "      <td> 2</td>\n",
         "      <td> 3</td>\n",
+        "      <td>      Serbia ( W )</td>\n",
+        "      <td> Thailand ( W )</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>2</th>\n",
         "      <td> 01. 08. 2014 13:40</td>\n",
-        "      <td>      Serbia ( W )</td>\n",
-        "      <td>  Germany ( W )</td>\n",
         "      <td> 3</td>\n",
         "      <td> 0</td>\n",
+        "      <td>      Serbia ( W )</td>\n",
+        "      <td>  Germany ( W )</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>3</th>\n",
         "      <td> 27. 07. 2014 17:00</td>\n",
-        "      <td>     Germany ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
         "      <td> 2</td>\n",
         "      <td> 3</td>\n",
+        "      <td>     Germany ( W )</td>\n",
+        "      <td>   Serbia ( W )</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>4</th>\n",
         "      <td> 26. 07. 2014 20:00</td>\n",
-        "      <td>        Montenegro</td>\n",
-        "      <td>        Greece </td>\n",
         "      <td> 3</td>\n",
         "      <td> 1</td>\n",
+        "      <td>        Montenegro</td>\n",
+        "      <td>        Greece </td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>5</th>\n",
         "      <td> 26. 07. 2014 17:00</td>\n",
-        "      <td>     Germany ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
         "      <td> 3</td>\n",
         "      <td> 2</td>\n",
+        "      <td>     Germany ( W )</td>\n",
+        "      <td>   Serbia ( W )</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>6</th>\n",
         "      <td> 25. 07. 2014 19:00</td>\n",
-        "      <td>     Germany ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
         "      <td> 3</td>\n",
         "      <td> 2</td>\n",
+        "      <td>     Germany ( W )</td>\n",
+        "      <td>   Serbia ( W )</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>7</th>\n",
         "      <td> 23. 07. 2014 19:00</td>\n",
-        "      <td>           Greece </td>\n",
-        "      <td>     Montenegro</td>\n",
         "      <td> 2</td>\n",
         "      <td> 3</td>\n",
+        "      <td>           Greece </td>\n",
+        "      <td>     Montenegro</td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>8</th>\n",
         "      <td> 20. 07. 2014 17:30</td>\n",
-        "      <td>             Iran </td>\n",
-        "      <td>         Italy </td>\n",
         "      <td> 0</td>\n",
         "      <td> 3</td>\n",
+        "      <td>             Iran </td>\n",
+        "      <td>         Italy </td>\n",
         "    </tr>\n",
         "    <tr>\n",
         "      <th>9</th>\n",
         "      <td> 20. 07. 2014 20:30</td>\n",
-        "      <td>              USA </td>\n",
-        "      <td>        Brazil </td>\n",
         "      <td> 3</td>\n",
         "      <td> 1</td>\n",
+        "      <td>              USA </td>\n",
+        "      <td>        Brazil </td>\n",
         "    </tr>\n",
         "  </tbody>\n",
         "</table>\n",
@@ -167,23 +167,23 @@
        ],
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 125,
+       "prompt_number": 7,
        "text": [
-        "                 date              team1           team2 score1 score2\n",
-        "0  03. 08. 2014 14:10  South Korea ( W )    Serbia ( W )      1      3\n",
-        "1  02. 08. 2014 17:40       Serbia ( W )  Thailand ( W )      2      3\n",
-        "2  01. 08. 2014 13:40       Serbia ( W )   Germany ( W )      3      0\n",
-        "3  27. 07. 2014 17:00      Germany ( W )    Serbia ( W )      2      3\n",
-        "4  26. 07. 2014 20:00         Montenegro         Greece       3      1\n",
-        "5  26. 07. 2014 17:00      Germany ( W )    Serbia ( W )      3      2\n",
-        "6  25. 07. 2014 19:00      Germany ( W )    Serbia ( W )      3      2\n",
-        "7  23. 07. 2014 19:00            Greece       Montenegro      2      3\n",
-        "8  20. 07. 2014 17:30              Iran           Italy       0      3\n",
-        "9  20. 07. 2014 20:30               USA          Brazil       3      1"
+        "                 date score1 score2              team1           team2\n",
+        "0  03. 08. 2014 14:10      1      3  South Korea ( W )    Serbia ( W )\n",
+        "1  02. 08. 2014 17:40      2      3       Serbia ( W )  Thailand ( W )\n",
+        "2  01. 08. 2014 13:40      3      0       Serbia ( W )   Germany ( W )\n",
+        "3  27. 07. 2014 17:00      2      3      Germany ( W )    Serbia ( W )\n",
+        "4  26. 07. 2014 20:00      3      1         Montenegro         Greece \n",
+        "5  26. 07. 2014 17:00      3      2      Germany ( W )    Serbia ( W )\n",
+        "6  25. 07. 2014 19:00      3      2      Germany ( W )    Serbia ( W )\n",
+        "7  23. 07. 2014 19:00      2      3            Greece       Montenegro\n",
+        "8  20. 07. 2014 17:30      0      3              Iran           Italy \n",
+        "9  20. 07. 2014 20:30      3      1               USA          Brazil "
        ]
       }
      ],
-     "prompt_number": 125
+     "prompt_number": 7
     }
    ],
    "metadata": {}
