--- a/learn.ipynb
+++ b/learn.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:911bcb744f88acd90f8da255d8efec6d6badaeba6641fa96b8e2f8840e5d84f7"
+  "signature": "sha256:fe7c0e75f89a387b5eb86c9c094f2c5575b7d869108b16910d1bf986e311e181"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -9,181 +9,77 @@
   {
    "cells": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import requests\n",
-      "import bs4\n",
-      "import pandas"
-     ],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
+     "source": [
+      "# Try 2\n",
+      "Switching to eventlet for concurrency support. Loading all the data! Don't run this too often though, looks like they like to block people..."
+     ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# here's a page:\n",
-      "# http://www.worldofvolley.com/statistics/game-statistics.html?position=0\n",
-      "# position goes up to like over 1000, and we need all the data!!!\n",
-      "# so start with this page, and get statistics from there, then concurrency etc...\n",
-      "# so first we only have countries male senior teams... we filter with the list in countries_male_senior.txt\n",
-      "# it's probably best to just ignore the included filtering (?kind=&countryId=0&genderId=2&ageId=0) cause i think it sucks\n",
-      "# plus this way we can parse all gender/age/whatever classes at the same time later\n",
-      "# so let's do this\n",
-      "url = \"http://www.worldofvolley.com/statistics/game-statistics.html?position=0\"\n",
+      "import eventlet\n",
+      "from eventlet.green import urllib2\n",
       "\n",
-      "# TODO: sometimes we get no response, methinks\n",
-      "res = requests.get(url)\n",
-      "print(res)\n",
-      "soup = bs4.BeautifulSoup(res.text)\n",
-      "# TODO: format date, e.g. 03. 08. 2014 14:10 -> 03.08.2014 (?)\n",
-      "dates = [td.string for td in soup.select('td.dateGame')]\n",
-      "# TODO: filter teams, e.g. only male senior teams (countries_male_senior.txt)\n",
-      "teams = [a.contents[1].string for a in soup.select('a.clubName')]\n",
-      "teams1 = teams[0::2]\n",
-      "teams2 = teams[1::2]\n",
-      "scores = map(lambda td: str.split(str(td.string), \":\"),\n",
-      "             soup.select('td.gameSmallResult'))\n",
-      "scores1 = [x[0] for x in scores]\n",
-      "scores2 = [x[1] for x in scores]\n",
+      "maxtries = 10\n",
       "\n",
-      "d = {\"date\": dates, \"score1\": scores1, \"score2\": scores2, \"team1\": teams1, \"team2\": teams2}\n",
-      "data = pandas.DataFrame(d)\n",
-      "data\n",
-      "# TODO: get more data in parallel (position=1, position=2, ...)\n",
-      "# TODO: reduce the data"
+      "def fetch(url):\n",
+      "    return urllib2.urlopen(url).read()\n",
+      "\n",
+      "def getTable(url):\n",
+      "    tries = 0\n",
+      "    while(tries < maxtries):\n",
+      "        print(\"getting \" + url + \"...\")\n",
+      "        try:\n",
+      "            res = urllib2.urlopen(url)\n",
+      "            soup = bs4.BeautifulSoup(res.read())\n",
+      "            dates = [str(td.string).translate(None, ' ')[0:10] for td in soup.select('td.dateGame')]\n",
+      "            # TODO: filter teams, e.g. only male senior teams (countries_male_senior.txt)\n",
+      "            teams = [a.contents[1].string for a in soup.select('a.clubName')]\n",
+      "            teams1 = teams[0::2]\n",
+      "            teams2 = teams[1::2]\n",
+      "            scores = map(lambda td: str.split(str(td.string), \":\"),\n",
+      "                         soup.select('td.gameSmallResult'))\n",
+      "            scores1 = [x[0] for x in scores]\n",
+      "            scores2 = [x[1] for x in scores]\n",
+      "            d = {\"date\": dates, \"score1\": scores1, \"score2\": scores2, \"team1\": teams1, \"team2\": teams2}\n",
+      "            data = pandas.DataFrame(d)\n",
+      "            if(len(data) == 0):\n",
+      "                # an empty data means something went wrong with the request\n",
+      "                raise EmptyError('DataFrame is empty')\n",
+      "            else:\n",
+      "                # looking good =)\n",
+      "                break\n",
+      "        except:\n",
+      "            # some error happens sometimes (ValueError, BadStatusLine), so if that happens just retry\n",
+      "            tries += 1\n",
+      "            continue\n",
+      "    return(data)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "<Response [200]>\n"
-       ]
-      },
-      {
-       "html": [
-        "<div style=\"max-height:1000px;max-width:1500px;overflow:auto;\">\n",
-        "<table border=\"1\" class=\"dataframe\">\n",
-        "  <thead>\n",
-        "    <tr style=\"text-align: right;\">\n",
-        "      <th></th>\n",
-        "      <th>date</th>\n",
-        "      <th>score1</th>\n",
-        "      <th>score2</th>\n",
-        "      <th>team1</th>\n",
-        "      <th>team2</th>\n",
-        "    </tr>\n",
-        "  </thead>\n",
-        "  <tbody>\n",
-        "    <tr>\n",
-        "      <th>0</th>\n",
-        "      <td> 03. 08. 2014 14:10</td>\n",
-        "      <td> 1</td>\n",
-        "      <td> 3</td>\n",
-        "      <td> South Korea ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>1</th>\n",
-        "      <td> 02. 08. 2014 17:40</td>\n",
-        "      <td> 2</td>\n",
-        "      <td> 3</td>\n",
-        "      <td>      Serbia ( W )</td>\n",
-        "      <td> Thailand ( W )</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>2</th>\n",
-        "      <td> 01. 08. 2014 13:40</td>\n",
-        "      <td> 3</td>\n",
-        "      <td> 0</td>\n",
-        "      <td>      Serbia ( W )</td>\n",
-        "      <td>  Germany ( W )</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>3</th>\n",
-        "      <td> 27. 07. 2014 17:00</td>\n",
-        "      <td> 2</td>\n",
-        "      <td> 3</td>\n",
-        "      <td>     Germany ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>4</th>\n",
-        "      <td> 26. 07. 2014 20:00</td>\n",
-        "      <td> 3</td>\n",
-        "      <td> 1</td>\n",
-        "      <td>        Montenegro</td>\n",
-        "      <td>        Greece </td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>5</th>\n",
-        "      <td> 26. 07. 2014 17:00</td>\n",
-        "      <td> 3</td>\n",
-        "      <td> 2</td>\n",
-        "      <td>     Germany ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>6</th>\n",
-        "      <td> 25. 07. 2014 19:00</td>\n",
-        "      <td> 3</td>\n",
-        "      <td> 2</td>\n",
-        "      <td>     Germany ( W )</td>\n",
-        "      <td>   Serbia ( W )</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>7</th>\n",
-        "      <td> 23. 07. 2014 19:00</td>\n",
-        "      <td> 2</td>\n",
-        "      <td> 3</td>\n",
-        "      <td>           Greece </td>\n",
-        "      <td>     Montenegro</td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>8</th>\n",
-        "      <td> 20. 07. 2014 17:30</td>\n",
-        "      <td> 0</td>\n",
-        "      <td> 3</td>\n",
-        "      <td>             Iran </td>\n",
-        "      <td>         Italy </td>\n",
-        "    </tr>\n",
-        "    <tr>\n",
-        "      <th>9</th>\n",
-        "      <td> 20. 07. 2014 20:30</td>\n",
-        "      <td> 3</td>\n",
-        "      <td> 1</td>\n",
-        "      <td>              USA </td>\n",
-        "      <td>        Brazil </td>\n",
-        "    </tr>\n",
-        "  </tbody>\n",
-        "</table>\n",
-        "</div>"
-       ],
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 7,
-       "text": [
-        "                 date score1 score2              team1           team2\n",
-        "0  03. 08. 2014 14:10      1      3  South Korea ( W )    Serbia ( W )\n",
-        "1  02. 08. 2014 17:40      2      3       Serbia ( W )  Thailand ( W )\n",
-        "2  01. 08. 2014 13:40      3      0       Serbia ( W )   Germany ( W )\n",
-        "3  27. 07. 2014 17:00      2      3      Germany ( W )    Serbia ( W )\n",
-        "4  26. 07. 2014 20:00      3      1         Montenegro         Greece \n",
-        "5  26. 07. 2014 17:00      3      2      Germany ( W )    Serbia ( W )\n",
-        "6  25. 07. 2014 19:00      3      2      Germany ( W )    Serbia ( W )\n",
-        "7  23. 07. 2014 19:00      2      3            Greece       Montenegro\n",
-        "8  20. 07. 2014 17:30      0      3              Iran           Italy \n",
-        "9  20. 07. 2014 20:30      3      1               USA          Brazil "
-       ]
-      }
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "maxpos = 1414 # maximum position argument\n",
+      "\n",
+      "urls = [\"http://www.worldofvolley.com/statistics/game-statistics.html?position=\" + str(pos) for pos in range(maxpos)]\n",
+      "\n",
+      "pool = eventlet.GreenPool(10) # more than 10 concurrent connections leads to refused connections\n",
+      "\n",
+      "tables = {\"all\": pandas.DataFrame(columns=[\"date\", \"score1\", \"score2\", \"team1\", \"team2\"])}\n",
+      "for table in pool.imap(getTable, urls):\n",
+      "    tables[\"all\"] = tables[\"all\"].append(table)\n",
+      "print(tables[\"all\"])"
      ],
-     "prompt_number": 7
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
